--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "love-notes",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "jsnext:main": "dist/index.mjs",
   "scripts": {
-    "start": "npm run develop",
-    "build": "babel src -d lib",
-    "example": "DEBUG=*:log,*:error node example/index.js",
-    "develop": "DEBUG=*:log,*:error nodemon src/index.js",
-    "test": "ava -t ./test/*.spec.js | tnyan",
-    "test:watch": "DEBUG=*.spec:log ava -w ./test/*.spec.js"
+    "start": "npm run watch",
+    "build": "rollup -c",
+    "watch": "rollup -c -w",
+    "example": "node example/index.js",
+    "test": "ava -t ./test/*.spec.js",
+    "test:watch": "DEBUG=*.spec:log ava -w ./test/*.spec.js",
+    "prepublish": "npm test"
   },
   "author": "",
   "license": "ISC",
@@ -17,17 +19,29 @@
     "ava": "^0.18.2",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.23.1",
+    "babel-eslint": "^7.2.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.2.1",
+    "babel-preset-latest": "^6.24.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.23.0",
-    "debug": "^2.6.3",
+    "babelrc-rollup": "^3.0.0",
+    "eslint": "^3.18.0",
+    "eslint-plugin-ava": "^4.2.0",
     "fs-jetpack": "^0.12.0",
+    "fuse-box": "^1.3.128",
     "nodemon": "^1.11.0",
-    "pretty-format": "^19.0.0",
+    "npm": "^4.4.1",
+    "rollup": "^0.41.6",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-includepaths": "^0.2.2",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-watch": "^3.2.2",
     "tap-nyan": "^1.1.0"
   },
   "dependencies": {
+    "debug": "^2.6.3",
     "fmt-obj": "^1.3.0",
     "fs-jetpack": "^0.12.0",
     "markdown-it": "^8.3.1",
@@ -35,7 +49,8 @@
     "remark-html": "^6.0.0",
     "remark-parse": "^3.0.0",
     "unified": "^6.1.1",
-    "unist-util-select": "^1.5.0"
+    "unist-util-select": "^1.5.0",
+    "unist-util-visit": "^1.1.1"
   },
   "babel": {
     "presets": [
@@ -45,6 +60,8 @@
   },
   "ava": {
     "babel": "inherit",
+    "failFast": true,
+    "tap": true,
     "source": [
       "**/*.{md,js}",
       "!node_modules/**/*",
@@ -52,8 +69,8 @@
       "!dist/**/*"
     ],
     "require": [
-      "babel-register",
-      "babel-polyfill"
+      "babel-polyfill",
+      "babel-register"
     ]
   }
 }
