--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "love-notes",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "A literate programming tangler and weaver",
   "main": "dist/index.js",
   "jsnext:main": "dist/index.mjs",
   "scripts": {
@@ -11,12 +11,12 @@
     "examples:tangler": "DEBUG=*:log node examples/tangler.js",
     "examples:weaver": "DEBUG=*:log node examples/weaver.js",
     "examples:readme": "DEBUG=*:log node examples/readme-example.js ",
-    "test": "ava -t ./test/*.spec.js",
+    "test": "ava -t ./test/*.spec.js | tnyan",
     "test:watch": "DEBUG=*.spec:log ava -w ./test/*.spec.js",
     "prepublish": "npm test"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Ada Lovecraft",
+  "license": "WTFPL",
   "devDependencies": {
     "ava": "^0.18.2",
     "babel-cli": "^6.24.0",
